Fully functional version of app
No server yet, but everything's tested and working well on the mobile
side. Tomorrow's project: backends.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="logging">Tap to stop logging.</string>
     <string name="logging_off">Tap to start logging.</string>
     <string name="logging_notification">Logging to BodyLog</string>
+    <string name="device_id">Body Identifier</string>
 
 </resources>
